Fixed button spacing on small screens

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -154,7 +154,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     border-color: transparent;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 991px) {
     .navbar-text {
         margin-top: 20px;
     }
